Replace deprecated URL-related methods